// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/<Input /> should pass 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  background-color: white;
  border: solid 1px var(--color-border);
  color: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-family: inherit;
  font-weight: inherit;
  font-size: 0.875rem;
  line-height: 1;
  opacity: 1;
  padding: 0.6rem 0.6rem 0.625rem 0.6rem;
  width: 100%;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--color-placeholder);
}

.emotion-0::-moz-placeholder {
  color: var(--color-placeholder);
}

.emotion-0:-ms-input-placeholder {
  color: var(--color-placeholder);
}

.emotion-0::placeholder {
  color: var(--color-placeholder);
}

.emotion-0:focus {
  box-shadow: 0 0 0 1px var(--color-text-blue) !important;
}

<input
  className="emotion-0 emotion-1"
  disabled={false}
/>
`;

exports[`elements/<Input /> should pass with a {icon} = "search" 1`] = `
.emotion-5 {
  position: relative;
}

.emotion-1 {
  cursor: default;
  color: var(--color-placeholder);
  right: 0.8rem;
  top: 0.725rem;
  position: absolute;
}

.emotion-3 {
  -webkit-appearance: none;
  background-color: white;
  border: solid 1px var(--color-border);
  color: inherit;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-family: inherit;
  font-weight: inherit;
  font-size: 0.875rem;
  line-height: 1;
  opacity: 1;
  padding: 0.6rem 2.25rem 0.625rem 0.6rem;
  width: 100%;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--color-placeholder);
}

.emotion-3::-moz-placeholder {
  color: var(--color-placeholder);
}

.emotion-3:-ms-input-placeholder {
  color: var(--color-placeholder);
}

.emotion-3::placeholder {
  color: var(--color-placeholder);
}

.emotion-3:focus {
  box-shadow: 0 0 0 1px var(--color-text-blue) !important;
}

<div>
  <div
    className="emotion-5 emotion-6"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 fa-1x emotion-0 emotion-1 emotion-2"
      color="var(--color-black-leather-jacket)"
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <input
      className="emotion-3 emotion-4"
      disabled={false}
    />
  </div>
</div>
`;
